-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 17, 20
-
Component/s: hotspot
-
b22
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8298860 | 17.0.7-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8299480 | 17.0.7 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
| JDK-8299160 | 11.0.19-oracle | Igor Veresov | P3 | Resolved | Fixed | b01 |
static class MyClass {
int x = 42;
}
public static int test() {
MyClass[] array = new MyClass[1];
array[0] = new MyClass();
return array[0].x;
}
Before
To reproduce, simply run:
java -XX:+AlwaysIncrementalInline -XX:CompileCommand=quiet -XX:CompileCommand=compileonly,Test::test -Xbatch -XX:CompileCommand=print,Test::test -XX:-TieredCompilation Test.java
and check _new_array_Java and _new_instance_Java calls in compiled code.
There might be more issues but we can check that by applying a prototype fix and re-running Valhalla tests. For now, we omitted
- backported by
-
JDK-8298860 Folding of loads is broken in C2 after JDK-8242115
-
- Resolved
-
-
JDK-8299160 Folding of loads is broken in C2 after JDK-8242115
-
- Resolved
-
-
JDK-8299480 Folding of loads is broken in C2 after JDK-8242115
-
- Resolved
-
- duplicates
-
JDK-8296014 EA does not work with G1 after JDK-8242115
-
- Closed
-
- relates to
-
JDK-8242115 C2 SATB barriers are not safepoint-safe
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/0ac93eb7
-
Commit
openjdk/jdk/58a7141a
-
Review
openjdk/jdk17u-dev/1001
-
Review
openjdk/jdk/10861