8295066: Folding of loads is broken in C2 after JDK-8242115

Backport-of: 58a7141a0dea5d1b4bfe6d56a95d860c854b3461